; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/pnp/extr_driver.c_pnp_device_attach.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/pnp/extr_driver.c_pnp_device_attach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pnp_dev = type { i64 }

@pnp_lock = common dso_local global i32 0, align 4
@PNP_READY = common dso_local global i64 0, align 8
@EBUSY = common dso_local global i32 0, align 4
@PNP_ATTACHED = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pnp_device_attach(%struct.pnp_dev* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.pnp_dev*, align 8
  store %struct.pnp_dev* %0, %struct.pnp_dev** %3, align 8
  %4 = call i32 @spin_lock(i32* @pnp_lock)
  %5 = load %struct.pnp_dev*, %struct.pnp_dev** %3, align 8
  %6 = getelementptr inbounds %struct.pnp_dev, %struct.pnp_dev* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load i64, i64* @PNP_READY, align 8
  %9 = icmp ne i64 %7, %8
  br i1 %9, label %10, label %14

10:                                               ; preds = %1
  %11 = call i32 @spin_unlock(i32* @pnp_lock)
  %12 = load i32, i32* @EBUSY, align 4
  %13 = sub nsw i32 0, %12
  store i32 %13, i32* %2, align 4
  br label %19

14:                                               ; preds = %1
  %15 = load i64, i64* @PNP_ATTACHED, align 8
  %16 = load %struct.pnp_dev*, %struct.pnp_dev** %3, align 8
  %17 = getelementptr inbounds %struct.pnp_dev, %struct.pnp_dev* %16, i32 0, i32 0
  store i64 %15, i64* %17, align 8
  %18 = call i32 @spin_unlock(i32* @pnp_lock)
  store i32 0, i32* %2, align 4
  br label %19

19:                                               ; preds = %14, %10
  %20 = load i32, i32* %2, align 4
  ret i32 %20
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
